<resources>
    <string name="app_name">Orgs 2.0</string>
    <string name="name">Cesta de Frutas</string>
    <string name="description">Laranja, manga e uva</string>
    <string name="value">R$ 19,99</string>

    <string name="et_name">Nome</string>
    <string name="et_description">Descrição</string>
    <string name="et_value">Valor</string>
    <string name="btn_save">Salvar</string>
    <string name="novo_produto">NOVO PRODUTO</string>
    <string name="adicionar_novo_produto">Adicionar Novo Produto</string>
    <string name="imagem_do_produto">Imagem do produto</string>
    <string name="selecione_a_imagem_para_o_produto">Selecione a imagem para o produto</string>
    <string name="carregar">Carregar</string>
    <string name="tiet_url">URL da imagem</string>
</resources>