<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_form_iv_choose_image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/selecione_a_imagem_para_o_produto"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/default_image" />

        <Button
            android:id="@+id/image_form_btn_load_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carregar"
            app:icon="@drawable/ic_action_refresh"
            app:layout_constraintBottom_toBottomOf="@id/image_form_iv_choose_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_form_iv_choose_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/image_form_til_url"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_form_btn_load_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/image_form_tiet_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tiet_url"
                android:inputType="textUri" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>